(admin/AddressesList > Points) ограничитель добавления адресов и (ArrowToTop) arrowInvisible position: fixed

--- a/src/components/ArrowToTop/ArrowToTop.module.css
+++ b/src/components/ArrowToTop/ArrowToTop.module.css
@@ -9,5 +9,6 @@
 }
 
 .arrowInvisible {
+  position: fixed;
   opacity: 0;
 }
